exports[`HoverableTranslatorRow renders correctly a key with translations 1`] = `
<div
  className="tableBodyRow"
  id="keyId2"
  onClick={[Function]}
  style={
    Object {
      "WebkitFlex": "none",
      "display": "flex",
      "flex": "none",
      "flexDirection": "row",
      "minHeight": 21,
    }
  }>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "white",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 17,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <span
      style={
        Object {
          "fontWeight": 900,
          "marginRight": 10,
        }
      }>
      someContext
    </span>
    <span
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }>
      A message
    </span>
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "white",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="es"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId2",
          "text": "A message",
          "translations": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "translationId1",
                  "lang": "es",
                  "translation": "Un mensaje",
                },
              },
              Object {
                "node": Object {
                  "id": "translationId2",
                  "lang": "ca",
                  "translation": "Un missatge",
                },
              },
            ],
          },
          "unusedSince": null,
        }
      }
      translation={
        Object {
          "id": "translationId1",
          "lang": "es",
          "translation": "Un mensaje",
        }
      } />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "white",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="ca"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId2",
          "text": "A message",
          "translations": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "translationId1",
                  "lang": "es",
                  "translation": "Un mensaje",
                },
              },
              Object {
                "node": Object {
                  "id": "translationId2",
                  "lang": "ca",
                  "translation": "Un missatge",
                },
              },
            ],
          },
          "unusedSince": null,
        }
      }
      translation={
        Object {
          "id": "translationId2",
          "lang": "ca",
          "translation": "Un missatge",
        }
      } />
  </div>
</div>
`;

exports[`HoverableTranslatorRow renders correctly a key without translations 1`] = `
<div
  className="tableBodyRow"
  id="keyId1"
  onClick={[Function]}
  style={
    Object {
      "WebkitFlex": "none",
      "display": "flex",
      "flex": "none",
      "flexDirection": "row",
      "minHeight": 21,
    }
  }>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "white",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 17,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <span
      style={
        Object {
          "fontWeight": 900,
          "marginRight": 10,
        }
      }>
      someContext
    </span>
    <span
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }>
      A message
    </span>
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "#d6e4ff",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="es"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId1",
          "text": "A message",
          "translations": Object {
            "edges": Array [],
          },
          "unusedSince": null,
        }
      }
      translation={null} />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "#d6e4ff",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="ca"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId1",
          "text": "A message",
          "translations": Object {
            "edges": Array [],
          },
          "unusedSince": null,
        }
      }
      translation={null} />
  </div>
</div>
`;

exports[`HoverableTranslatorRow renders correctly a selected key 1`] = `
<div
  className="tableBodyRow"
  id="keyId1"
  onClick={[Function]}
  style={
    Object {
      "WebkitFlex": "none",
      "display": "flex",
      "flex": "none",
      "flexDirection": "row",
      "minHeight": 21,
    }
  }>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "#dcd6ff",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 17,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <span
      style={
        Object {
          "fontWeight": 900,
          "marginRight": 10,
        }
      }>
      someContext
    </span>
    <span
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }>
      A message
    </span>
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "#dcd6ff",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="es"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId1",
          "text": "A message",
          "translations": Object {
            "edges": Array [],
          },
          "unusedSince": null,
        }
      }
      translation={null} />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "1 1 0px",
        "backgroundColor": "#dcd6ff",
        "borderBottom": "1px solid #c6bdff",
        "flex": "1 1 0px",
        "marginRight": 5,
        "paddingBottom": 1,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 1,
        "position": "relative",
      }
    }>
    <div
      changeSelectedKey={[Function]}
      dataMockType="Translation"
      lang="ca"
      theKey={
        Object {
          "context": "someContext",
          "id": "keyId1",
          "text": "A message",
          "translations": Object {
            "edges": Array [],
          },
          "unusedSince": null,
        }
      }
      translation={null} />
  </div>
</div>
`;
